k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juice-shop
  labels:
    app.kubernetes.io/name: juice-shop
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
