k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
  labels:
    app: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
